2023-10-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Fix a use of an uninitialized struct member in generalized constant propagation analysis of some left shifts: bugs #3625, #3665.

2023-10-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (parseCmdLine): place -Wl-f options in linkOptionsSet2,
	  (linkEdit): pass linkOptionsSet2 for $L,
	  (assemble): pass NULL for $L
	* src/SDCCutil.h,
	* src/SDCCutil.c (buildCmdLine): added list2 for $L command line options
	* src/ds390/main.c (_tininative_do_assemble): pass NULL for $L
	* src/avr/main.c (_linkCmd),
	* src/ds390/main.c (_linkCmd),
	* src/hc08/main.c (_linkCmd),
	* src/mcs51/main.c (_linkCmd),
	* src/mos6502/main.c (_linkCmd),
	* src/pdk/main.c (_linkCmd),
	* src/stm8/main.c (_linkCmd),
	* src/z80/main.c (_z80LinkCmd): added $L for command line options
	* src/z80/main.c (_sm83_rgblink): pass NULL for $L
	* src/SDCCsymt.c (checkSClass): cosmetics

2023-10-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkmain.c (parse): warn about ignored nested linker script

2023-10-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  support/regression/tests/bug-3660.c:
	  Fix bug #3660.

2023-10-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Rabbit interrupt handling fixes, based on patch by D-mo.

2023-10-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asrab/rabmch.c:
	  Fix bug #3661, patch by D-mo.
	* support/regression/tests/bug-3661.c:
	  Regression test for bug #3661.

2023-09-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/uc6502-stack-auto/support.c,
	* support/regression/ports/uc6502-stack-auto/uCsim.cmd,
	* support/regression/ports/uc6502/support.c,
	* support/regression/ports/uc6502/uCsim.cmd: moved simif to safer location

2023-09-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s: